forth/test/fail/test_const_fold_redundant_mod_one.af
use' ../../lang.af
fun: test_const_fold_redundant_mod_one { val -- out } val 1 .mod end
